# mt

./: .cursorrules  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  .pyscn.toml  .tool-versions  AGENTS.md  Cargo.toml  PYWEBVIEW_SETUP.md  README.md  SECURITY.md  TODO.md  build.py  config.py  coverage.json  deno.jsonc  fastapi_app.py  hatch_build.py  index.html  main.py  mt.db.backup  mt_20260127.sql  package-lock.json  package.json  pyproject.toml  repomix.config.json5  requirements.txt  server.py  settings.toml  taskfile.yml  test_enhanced_scanner.py  test_fastapi_server.py  test_pywebview.py  test_pywebview_fastapi.py  test_signature_vectors.py  test_simple.py  themes.json  vite.config.js
.claude/: settings.json
.claude/skills/: rust-desktop-applications
.github/: renovate.json5
.github/workflows/: test.yml
api/: __init__.py  api.py  scan_endpoints.py  server.py
api/examples/: automation.py  client.py  simple_client.py
app/: main.py
app/backend/: __init__.py  main.py
app/core/: config.py  database.py  favorites.py  library.py  lyrics.py  metadata.py  stoplight.py  theme.py  volume.py
app/frontend/: index.html  main.js  package-lock.json  package.json  playwright.config.js  styles.css  vite.config.js  vitest.config.js
app/models/: __init__.py  playlist.py  queue.py  track.py
app/schemas/: queue.py  track.py
app/services/: filesystem.py  library.py  player.py  queue.py  streaming.py
app/utils/: icons.py  lyrics.py  mediakeys.py  repeater.py
app/websocket/: manager.py
backend/: __init__.py  main.py  requirements.txt
backend/models/: __init__.py  events.py  favorites.py  playlist.py  queue.py  responses.py  settings.py  track.py
backend/routes/: __init__.py  favorites.py  lastfm.py  library.py  playlists.py  queue.py  settings.py  watched_folders.py  websocket.py
backend/services/: __init__.py  artwork.py  database.py  lastfm.py  scanner.py  scanner_2phase.py
backlog/: config.yml
backlog/completed/: task-003 - Implement-repeat-functionality.md  task-006 - Implement-playlist-functionality.md  task-007 - Implement-Last.fm-scrobbling.md  task-013 - Suppress-python-vlc-output-in-favor-of-eliot-logging.md  task-018 - Implement-task-runners.md  task-034 - Swap-unicode-buttons-with-custom-icon-buttons-from-static.md  task-041 - Fix-playback-and-utility-controls-moving-when-resizing-window.md  task-042 - Fix-shuffle-order-not-being-random-and-looping-through-subset-of-tracks.md  task-043 - Fix-manual-jumping-across-track-progress-not-being-precise.md  task-046 - Implement-Settings-Menu.md  task-058 - Fix-context-menu-highlight-to-use-theme-primary-color.md  task-074 - Add-integration-tests-for-recent-bug-fixes.md  task-075 - Add-unit-tests-for-PlayerEventHandlers-class.md  task-076 - Increase-PlayerCore-test-coverage-from-29%-to-50%+.md  (+82 more)
benchmarks/: baseline-hybrid-2025-01-23.md  migration-comparison-2025-01-23.md
core/: _scan.py  app.py  controls.py  db.py  favorites.py  gui.py  library.py  logging.py  models.py  now_playing.py  player.py  progress.py  queue.py  scan.zig  scan_async.py  stoplight.py  theme.py  volume.py
core/ui/: app.py  (+2 more)
crates/mt-core/: Cargo.toml  build.rs
crates/mt-core/src/: ffi.rs  lib.rs
docs/: README.md  api-contract.md  api.md  benchmark.md  build-performance.md  custom-playlists.md  fastapi-to-rust-migration-analysis.md  ffi-validation-results.md  infinite-scroll-pattern.md  lastfm.md  python-architecture.md  status.md  tauri-architecture.md  tauri-music-player-implementation-guide.md  testing.md  theming.md  tkinter-gui.md  vlc-integration.md  web-migration-pywebview.md  web-migration.md  zig-migration-plan.md  zig-migration-skeleton-summary.md  zig-modules.md
scripts/: bootstrap.sh
src/: build.zig  pydust.build.zig.py  scan.zig  scan_enhanced.zig
src-tauri/: Cargo.toml  build.rs  dependency-audit.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: audio_test.rs
src-tauri/icons/: icon.icns
src-tauri/proptest-regressions/db/: queue_props_test.txt
src-tauri/src/: concurrency_test.rs  dialog.rs  events.rs  ffi.rs  lib.rs  main.rs  media_keys.rs  metadata.rs  sidecar.rs  watcher.rs
src-tauri/src/audio/: engine.rs  engine_test.rs  error.rs  mod.rs
src-tauri/src/commands/: audio.rs  favorites.rs  fs.rs  lastfm.rs  mod.rs  playlists.rs  queue.rs  settings.rs
src-tauri/src/db/: benchmarks.rs  compat_test.rs  favorites.rs  library.rs  models.rs  playlists.rs  queue.rs  queue_props_test.rs  schema.rs  watched.rs
src-tauri/src/ffi/: mod.rs  scanner.rs
src-tauri/src/lastfm/: client.rs  mod.rs  rate_limiter.rs  types.rs
src-tauri/src/scanner/: artwork.rs  artwork_cache.rs  artwork_cache_ffi.rs  commands.rs  fingerprint.rs  inventory.rs  metadata.rs  mod.rs  scan.rs
src-tauri/tests/: ffi_integration.rs
static/: _banner.pxd  logo.pxd
taskfiles/: bench.yml  deno.yml  npm.yml  pex.yml  tauri.yml  zig.yml
templates/: README.md  filters.py
tests/: README.md  benchmark.py  conftest.py  test_e2e_bug_fixes.py  test_e2e_concurrency.py  test_e2e_controls.py  test_e2e_controls_extended.py  test_e2e_integration.py  test_e2e_library.py  test_e2e_metadata.py  test_e2e_playback.py  test_e2e_queue.py  test_e2e_smoke.py  test_e2e_views.py  test_filesystem_integration.py  test_native_filesystem.py  test_props_db.py  test_props_files.py  test_props_player_core.py  test_props_queue_manager.py  test_props_utils.py  test_unit_api_client.py  test_unit_api_handlers.py  test_unit_backend_database.py  test_unit_bug_fixes.py  test_unit_db.py  test_unit_favorites.py  test_unit_files.py  test_unit_library_manager.py  test_unit_lyrics.py  test_unit_metadata.py  test_unit_now_playing.py  test_unit_play_threshold.py  test_unit_player_core.py  test_unit_player_event_handlers.py  test_unit_playlist_identifiers.py  test_unit_playlists.py  test_unit_queue_manager.py  test_unit_rate_limiting.py  test_unit_scan.py  (+2 more)
utils/: common.py  files.py  logs.py  mediakeys.py  reload.py  repeater.py  ui.py
vagrant/: Vagrantfile.fedora  Vagrantfile.macos  Vagrantfile.ubuntu
zig-core/: build.zig
(+491 files in other folders)
