[package]
name = "mt"
version = "0.1.0"
description = "Desktop music player for large collections"
authors = ["pythoninthegrass"]
edition = "2021"

[lib]
name = "mt_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }

# Audio playback
rodio = { version = "0.21", features = ["flac", "mp3", "mp4", "vorbis", "wav"] }
parking_lot = "0.12"
thiserror = "2"

# Media keys (macOS Now Playing widget, MPRIS on Linux, SMTC on Windows)
souvlaki = "0.8"
tauri-plugin-devtools = { version = "2", optional = true }

[features]
default = ["devtools"]
devtools = ["dep:tauri-plugin-devtools"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
