[package]
name = "mt"
version = "0.1.0"
description = "Desktop music player for large collections"
authors = ["pythoninthegrass"]
edition = "2024"

[lib]
name = "mt_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "io-util"] }

# Audio playback
rodio = { version = "0.21", features = ["flac", "mp3", "mp4", "vorbis", "wav"] }
parking_lot = "0.12"
thiserror = "2"
chrono = "0.4"

# Media keys (macOS Now Playing widget, MPRIS on Linux, SMTC on Windows)
souvlaki = "0.8"

# Audio metadata reading/writing
lofty = "0.22"

# Persistent key-value store
tauri-plugin-store = "2"

# Database
rusqlite = { version = "0.38", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.32"

# Random number generation (for shuffle)
rand = "0.9"

# UUID generation (for scan job IDs)
uuid = { version = "1", features = ["v4"] }

# Filesystem watching with debouncing
notify-debouncer-full = "0.5"

# Scanner (filesystem traversal, parallel processing)
walkdir = "2"
rayon = "1.10"
base64 = "0.22"

tauri-plugin-devtools = { version = "2", optional = true }
sha2 = "0.10.9"

# MCP bridge for AI agent debugging (IPC monitoring, screenshots, DOM access)
tauri-plugin-mcp-bridge = { version = "0.8", optional = true }

# Last.fm integration
md5 = "0.7"

# LRU cache for artwork
lru = "0.12"

[features]
default = []
devtools = ["dep:tauri-plugin-devtools", "tauri/devtools"]
mcp = ["dep:tauri-plugin-mcp-bridge"]

[dev-dependencies]
tempfile = "3"
proptest = "1.5"

# Dev profile optimizations for faster local builds
[profile.dev]
split-debuginfo = "unpacked"  # macOS-specific: up to 70% faster incremental debug builds
debug = "line-tables-only"    # Reduce debug info for faster builds (still get line numbers in backtraces)

# Optimize build scripts and proc-macros even in dev mode
[profile.dev.build-override]
opt-level = 3  # Faster builds when proc-macros are dependencies (serde_derive, tauri macros)

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
